--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "type": "git",
     "url": "git+https://github.com/mmomtchev/react-stylist.git"
   },
+  "scripts": {
+    "test": "mocha"
+  },
   "keywords": [
     "react",
     "documentation",
@@ -28,5 +31,9 @@
     "map-stream": "^0.0.7",
     "vinyl": "^2.2.1",
     "vinyl-fs": "^3.0.3"
+  },
+  "devDependencies": {
+    "documentation": "^13.2.5",
+    "mocha": "^10.0.0"
   }
 }
