--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,13 +7,13 @@ on:
     branches: [ '*' ]
 
 jobs:
-  build:
+  test:
 
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [ 14.x, 16.x, 18.x ]
+        node-version: [ 14.x, 16.x ]
 
     steps:
     - uses: actions/checkout@v2
