--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "url": "git+https://github.com/mmomtchev/documentation-hipster.git"
   },
   "scripts": {
-    "test": "eslint index.js && mocha"
+    "test": "mocha",
+    "lint": "eslint index.js",
+    "lint:fix": "eslint index.js --fix",
+    "preversion": "npm run lint && npm run test",
+    "postversion": "git push && git push --tags"
   },
   "keywords": [
     "react",
