--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "scripts": {
     "test": "mocha",
-    "lint": "eslint index.js",
-    "lint:fix": "eslint index.js --fix",
+    "lint": "eslint *.js test/*.test.js",
+    "lint:fix": "eslint *.js test/*.test.js --fix",
     "preversion": "npm run lint && npm run test",
     "postversion": "git push && git push --tags"
   },
