--- a/test/React-externalLinks.yml
+++ b/test/React-externalLinks.yml
@@ -1,3 +1,5 @@
+project-name: hipster
+project-version: forever-young
+
 documentation-hipster:
     externalCrossLinks: test/externalCrossLinks.js
-
