update the keywords

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react",
     "documentation",
     "documentation.js",
+    "theme",
+    "hipster",
     "jsdoc",
     "react-styleguidist"
   ],
